[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/PngItem_851274.png" type="Texture" id=1]
[ext_resource path="res://scripts/Player.gd" type="Script" id=3]
[ext_resource path="res://assets/laser.mp3" type="AudioStream" id=5]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform bool active = false;

void fragment() {
	vec4 previous_color = texture(TEXTURE, UV);
	vec4 white_color = vec4(1.0,0, 0, previous_color.a);
	vec4 new_color = previous_color;
	if (active == true)
	{
		new_color = white_color
	}
	COLOR = new_color;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/active = false

[sub_resource type="CircleShape2D" id=3]
radius = 10.4858

[sub_resource type="Animation" id=4]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.100522 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="ParticlesMaterial" id=5]
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 20.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 514.29
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 8.0
color = Color( 0.207843, 0.207843, 0.207843, 1 )

[node name="Player" type="Node2D"]
material = SubResource( 2 )
scale = Vector2( 0.134813, 0.13815 )
script = ExtResource( 3 )

[node name="PngItem_851274" type="Sprite" parent="."]
position = Vector2( -2.43939, -4.33156 )
scale = Vector2( 1.77758, 2.07812 )
texture = ExtResource( 1 )

[node name="areaPlayer" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="areaPlayer"]
position = Vector2( 0, 1.46403 )
scale = Vector2( 46.6929, 48.1951 )
shape = SubResource( 3 )

[node name="RotationTiming" type="Timer" parent="."]
wait_time = 0.216
one_shot = true

[node name="ShotTiming" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/hit = SubResource( 4 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0

[node name="Rotation" type="Tween" parent="."]

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( -1.14481, 396.58 )
amount = 30
visibility_rect = Rect2( -250, -250, 500, 500 )
local_coords = false
process_material = SubResource( 5 )

[connection signal="area_entered" from="areaPlayer" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="RotationTiming" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="ShotTiming" to="." method="_on_ShotTiming_timeout"]
[connection signal="tween_all_completed" from="Rotation" to="." method="_on_Rotation_tween_all_completed"]
